# setdns

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md  rustfmt.toml
src/: config.rs  error.rs  lib.rs
src/platform/: mod.rs  unsupported.rs
src/platform/linux/: mod.rs  resolv_conf.rs  resolved.rs
src/platform/macos/: global.rs  mod.rs  resolver.rs  state.rs
src/platform/windows/: interface.rs  mod.rs  nrpt.rs  powershell.rs
test-runner/: AGENTS.md  Cargo.toml
test-runner/docker/: bare-entrypoint.sh  resolved-entrypoint.sh  run.sh
test-runner/platform/linux/docker/: Dockerfile  lib.sh  run.sh
test-runner/platform/linux/docker/cases/: bare.sh  dbus-without-resolved.sh  managed-resolv-conf-global-no-device.sh  resolved-happy.sh  resolved-no-stub.sh  stub-file-without-resolved.sh  stub-without-resolved.sh
test-runner/src/: env_guard.rs  main.rs  scenario.rs  system_dns.rs  test_dns.rs  test_tun.rs  verifier.rs
