[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
setdns = { path = ".." }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
hickory-proto = "0.26"
hickory-resolver = "0.26"
hickory-server = "0.26"
tun = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
